--- a/index.css
+++ b/index.css
@@ -1,1 +1,177 @@
 /* Put your style information here! */
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin:0;
+    padding: 0;
+    scroll-behavior: smooth;
+    overflow-anchor: none;
+}
+
+body {
+    font-family: 'open sans'; 
+    letter-spacing:2%;
+    color:#252421;
+    vertical-align: text-top;
+    padding-bottom: 20px;
+    height:100%;
+}
+
+.container1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#first-title{
+    margin-top: 5%;
+    font-size:30px;
+}
+
+#description{
+    margin-top: 2%;
+    width: 60%;
+    letter-spacing: 0.5px;
+    line-height: 25px;
+}
+
+.navbar {
+    clear:left;
+    margin:auto;
+    margin-top:5%;
+    width:80%;
+    border-color:lightgrey;
+    height:1;
+}
+
+#box{
+    margin:auto;
+    margin-left:10%;
+}
+
+#title{
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 2%;
+    font-family: "Montserrat";
+    color: chocolate;
+    text-transform: uppercase;
+}
+
+#box2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#link{
+    font-size: 20px;
+    line-height: 30px;
+    margin-top:5%;
+}
+
+#link a:visited, #link a{
+    color: chocolate;
+    font-weight: 600;
+    transition:0.3s;
+}
+
+#p{
+    font-size: 15px;
+    width: 70%;
+    line-height: 30px;
+    margin-top:2%;
+}
+
+#p a:visited, #p a{
+    color: chocolate;
+    font-weight: 600;
+    transition:0.3s;
+}
+
+#p2{
+    font-size: 20px;
+    width: 70%;
+    line-height: 30px;
+    margin-top:5%;
+}
+
+#p3{
+    font-size: 15px;
+    width: 70%;
+    line-height: 30px;
+    margin-top:5%; 
+}
+
+
+#p4{
+    padding-bottom: 100px;
+}
+
+/*images*/
+#title-photo{
+    width:500px;
+    height: 300px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#original-website, #lo-fi-mobile, #lo-fi-tablet, #lo-fi-desktop, #hi-fi-mobile{
+    width:700px;
+    height: 400px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#lo-fi-mobile{
+    width:700px;
+    height: 400px;
+    max-width: 100%;
+    margin-top: 5%;
+    margin-left:10%;
+}
+
+#hi-fi-tablet{
+    width:700px;
+    height: 500px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#hi-fi-desktop{
+    width:700px;
+    height: 600px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#visual-guide{
+    width:750px;
+    height: 500px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#desktop-redesign{
+    width:600px;
+    height: 400px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#mobile-redesign{
+    width:200px;
+    height: 400px;
+    max-width: 100%;
+    margin-top: 5%;
+}
+
+#tablet-redesign{
+    width:300px;
+    height: 400px;
+    max-width: 100%;
+    margin-top: 5%;
+}
