--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 /* Put your style information here! */
 
+/*text*/
+
 html, body {
     width: 100%;
     height: 100%;
@@ -68,7 +70,7 @@ body {
 }
 
 #link{
-    font-size: 20px;
+    font-size: 17px;
     line-height: 30px;
     margin-top:5%;
 }
